# echoregions

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  20230926_region_mask_investigation_0.10.0_pre_nan_fix.ipynb  20230926_region_mask_investigation_0.11.0_post_nan_fix.ipynb  20230926_region_mask_investigation_0.11.0_pre_nan_fix.ipynb  README.md  _echoregions_version.py  pyproject.toml  pytest.ini  region_mask_investigation_0.10.0.ipynb  region_mask_investigation_0.11.0.ipynb  requirements-dev.txt  requirements-notebooks.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  test_region.ipynb
.github/workflows/: pypi.yml  pytest.yml
docs/: .gitignore  requirements.txt
docs/source/: .gitignore  Lines_functionality.ipynb  OLD_Regions2D_functions.ipynb  Regions2D_functionality.ipynb  Regions2D_functions.ipynb  Regions2D_masking.ipynb  Regions_functionality.ipynb  _config.yml  _toc.yml  api.rst  conf.py  index.md  index.rst  installation.rst
echoregions/: __init__.py  core.py
echoregions/convert/: __init__.py  api.py  ecs_parser.py  ev_parser.py  evl_parser.py  evr_parser.py  evr_parser_old.py  merge.py  read.py  utils.py
echoregions/formats/: __init__.py  geometry.py  lines.py  multi.py  region2d.py  regions2d.py
echoregions/lines/: __init__.py  lines.py  lines_mask.py  lines_parser.py
echoregions/mask/: region_mask.py
echoregions/plot/: line_plot.py  region_plot.py
echoregions/regions2d/: __init__.py  evr_writer.py  regions2d.py  regions2d_mask.py  regions2d_parser.py
echoregions/sonar/: __init__.py  sonar.py  sonar_parser.py
echoregions/test_data/: Summer2017_JuneCal_3freq.ecs  transect.evl  transect.evr  transect_BT_ET.evr  transect_ET_RT.evr  transect_empty.evr  transect_missing_bbox.evr  transect_multi_mask.evr  transect_no_ST.evr  x1.evl  x1.evr  x1_BT_ET.evr  x1_RT_RT.evr  x1_ST_ST.evr  x1_no_ET.evr  x1_no_ST.evr  x1_too_few.evl
echoregions/tests/: conftest.py  example_plot_evr.py  examples.py  test_convert.py  test_ev_parser.py  (+11 more)
notebooks/: ECS_functions.ipynb  Lines_functions.ipynb  Lines_plotting.ipynb  Regions2D_functions.ipynb  Regions2D_masking-new-Sv-version.ipynb  Regions2D_masking.ipynb  Regions2D_plotting.ipynb  plotting_example.ipynb  read_bottom_from_evl.ipynb  requirements.txt
(+99 files in other folders)
