[metadata]
name = echoregions
maintainer = Caesar Tuguinay
maintainer_email = ctuguina@uw.edu
description = Parsers and functions for working with EVR and EVL files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echoregions
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
author = Caesar Tuguinay
author_email = ctuguina@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
py_modules =
    _echoregions_version
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools_scm
